Updated by task 'AutomatedMDTask_1634755534130_TM-MT_1634755555746'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/audience-manager.en/commit/4d1baf73811ee4ba66cadcf4ee72e634cb8c5163

--- a/help/using/docs-updates/docs-2020.md
+++ b/help/using/docs-updates/docs-2020.md
@@ -1,15 +1,15 @@
 ---
 description: Une liste de la documentation nouvelle ou révisée publiée en 2020. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
-seo-description: Une liste de la documentation nouvelle ou révisée publiée en 2020. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
-seo-title: Mises à jour de la documentation 2020
+seo-description: A list of new or revised documentation released in 2020. Includes minor updates to the Audience Manager documentation that might not be covered in the Experience Cloud release notes.
+seo-title: 2020 Documentation Updates
 solution: Audience Manager
 title: Mises à jour de la documentation 2020
-feature: Présentation
+feature: Overview
 exl-id: 38af1e31-f0dd-4956-b456-ef2002f77707
-source-git-commit: 319be4dade263c5274624f07616b404decb7066f
+source-git-commit: b0521682c6332d23e55d769e7421680337670fa4
 workflow-type: tm+mt
-source-wordcount: '1096'
-ht-degree: 60%
+source-wordcount: '1065'
+ht-degree: 56%
 
 ---
 
@@ -24,7 +24,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
 
 | Rubrique | Description |
 |----|----|
-| [Audiences prédictives](/help/using/features/algorithmic-models/predictive-audiences.md) | <ul><li>**Clonage des modèles de Predictive Audiences** : Vous pouvez désormais cloner des modèles existants et modifier leur configuration en fonction de vos besoins. Pour plus d’informations, consultez [Clonage et modification des modèles d’audience prédictive](/help/using/features/algorithmic-models/predictive-audiences.md#clone-predictive-audiences) .</li><li>**Classification par lot des audiences prédictives** : Outre la classification des visiteurs selon des personnalités distinctes en temps réel, Predictive Audiences prend désormais en charge la classification par lots, ce qui vous permet de classer les utilisateurs intégrés et de les activer dans des destinations par lot.</li></ul> |
+| [Audiences prédictives](/help/using/features/algorithmic-models/predictive-audiences.md) | <ul><li>**Clonage des modèles de Predictive Audiences**: Vous pouvez désormais cloner des modèles existants et modifier leur configuration en fonction de vos besoins. Lecture [Clonage et modification des modèles d’audience prédictive](/help/using/features/algorithmic-models/predictive-audiences.md#clone-predictive-audiences) pour plus d’informations.</li><li>**Classification par lot des audiences prédictives**: Outre la classification des visiteurs selon des personnalités distinctes en temps réel, Predictive Audiences prend désormais en charge la classification par lots, ce qui vous permet de classer les utilisateurs intégrés et de les activer dans des destinations par lot.</li></ul> |
 | [Rapports de chevauchement](/help/using/reporting/dynamic-reports/dynamic-reports.md) | Nous avons mis à jour la méthodologie que nous utilisons pour calculer les rapports de chevauchement ([Caractéristique à caractéristique](/help/using/reporting/dynamic-reports/trait-trait-overlap-report.md), [Segment à caractéristique](/help/using/reporting/dynamic-reports/segment-trait-overlap-report.md), [Segment à segment](/help/using/reporting/dynamic-reports/segment-segment-overlap-report.md)). Le calcul des rapports de chevauchement est désormais basé sur les uniques de rapports et les signatures MinHash (plutôt que sur [1/54 échantillonnage de données](/help/using/reporting/report-sampling.md#data-sampling-ratio)). |
 
 
@@ -33,21 +33,21 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
 | Rubrique | Description |
 |---- |----|
 | [Accessibilité en Audience Manager](/help/using/overview/accessibility-in-aam.md) | L’accessibilité fait référence à une série de fonctionnalités qui rendent un produit logiciel utilisable, avec le moins d’effort possible de la part d’utilisateurs présentant divers handicaps, tels que visuels, auditifs, cognitifs, moteurs ou autres. Afin de faciliter l’Audience Manager pour tous, nous avons développé la prise en charge de plusieurs fonctionnalités d’accessibilité, détaillées dans cet article. |
-| [Noms ](/help/using/integration/sending-audience-data/batch-data-transfer-explained/inbound-s3-filenames.md) de fichiers S3 entrants et noms de fichiers FTP  [entrants](/help/using/integration/sending-audience-data/batch-data-transfer-explained/inbound-ftp-filenames.md) | Nous avons mis à jour les définitions et fourni des exemples pour les champs `DPID` et `DPID_TARGET_DATA_OWNER` dans la syntaxe du nom de fichier. |
+| [Noms de fichiers S3 entrants](/help/using/integration/sending-audience-data/batch-data-transfer-explained/inbound-s3-filenames.md) et [noms de fichiers FTP entrants](/help/using/integration/sending-audience-data/batch-data-transfer-explained/inbound-ftp-filenames.md) | Nous avons mis à jour les définitions et fourni des exemples pour le `DPID` et `DPID_TARGET_DATA_OWNER` dans la syntaxe du nom de fichier. |
 
 ## Août 2020 {#aam-august-updates}
 
 | Rubrique | Description |
 |---- |----|
-| [Correspondance client Google pour les destinations basées sur les personnes](../features/destinations/people-based-destinations-prerequisites.md#gcm) | Vous pouvez désormais utiliser [!UICONTROL People-Based Destinations] pour cibler les utilisateurs via [!DNL Google Customer Match]. Avant de pouvoir utiliser [!UICONTROL People-Based Destinations] pour envoyer vos segments d’audience propriétaires à une destination [!DNL Google Customer Match], il est obligatoire que [!DNL Google] vous ajoute à leur liste autorisée. Pour plus d’informations, consultez la documentation [Destinations basées sur les personnes](../features/destinations/people-based-destinations-prerequisites.md#gcm) . |
-| [Nouveaux serveurs SFTP](../faq/faq-data-collection.md) | Vous pouvez désormais utiliser les nouveaux serveurs [!DNL SFTP] ([!DNL ftp-in-gtw] et [!DNL ftp-out-gtw]) qui utilisent [!DNL AWS SFTP Gateway] sur [!DNL S3]. |
+| [Correspondance client Google pour les destinations basées sur les personnes](../features/destinations/people-based-destinations-prerequisites.md#gcm) | Vous pouvez désormais utiliser [!UICONTROL People-Based Destinations] pour cibler les utilisateurs via [!DNL Google Customer Match]. Avant d’utiliser [!UICONTROL People-Based Destinations] pour envoyer vos segments d’audience propriétaires à un [!DNL Google Customer Match] destination, il est obligatoire que [!DNL Google] vous ajoute à leur liste autorisée. Vérifiez les [Destinations basées sur les personnes](../features/destinations/people-based-destinations-prerequisites.md#gcm) pour plus d’informations. |
+| [Nouveaux serveurs SFTP](../faq/faq-data-collection.md) | Vous pouvez désormais utiliser la nouvelle [!DNL SFTP] Serveurs ([!DNL ftp-in-gtw] et [!DNL ftp-out-gtw]) qui utilisent [!DNL AWS SFTP Gateway] over [!DNL S3]. |
 
 
 ## Juillet 2020 {#aam-july-updates}
 
 | Rubrique | Description |
 |---- |----|
-| [Partage d’audiences entre Audience Manager et Adobe Experience Platform](/help/using/integration/integration-aep/aam-aep-audience-sharing.md#aep-aam-segment-population-differences) | La nouvelle section **Comprendre les différences de population de segment entre l’Audience Manager et l’Experience Platform** décrit les raisons possibles pour lesquelles les nombres de population peuvent varier entre l’Experience Platform et l’Audience Manager. |
+| [Partage d’audiences entre Audience Manager et Adobe Experience Platform](/help/using/integration/integration-aep/aam-aep-audience-sharing.md#aep-aam-segment-population-differences) | la nouvelle section, **Comprendre les différences de population de segment entre l’Audience Manager et l’Experience Platform**, décrit les raisons possibles pour lesquelles le nombre de populations peut varier entre Experience Platform et Audience Manager. |
 | [Prise en main des API REST d’Audience Manager](/help/using/api/rest-api-main/aam-api-getting-started.md#jwt) | Nous avons ajouté une nouvelle section, **Authentification JWT (compte de service) à l’aide de[!DNL Adobe I/O]**. Reportez-vous à cette section pour vous authentifier aux API d’Audience Manager à l’aide de [!DNL Adobe I/O]. |
 
 ## Juin 2020 {#aam-june-updates}
@@ -89,5 +89,5 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
 |--- |----|
 | [Rapports d’utilisation des activités](../features/administration/activity-usage-reporting.md) | L’[!UICONTROL Activity Usage Report] vous aide à visualiser et à effectuer le suivi de l’utilisation des activités de votre instance Audience Manager, ce qui vous donne une idée claire de votre utilisation des activités comparée à votre engagement contractuel. |
 | [Liste des destinations d’Audience Manager basées sur un appareil (serveur à serveur)](/help/using/features/destinations/device-based-destinations-list.md) | Cette page affiche des informations sur chaque intégration serveur à serveur entre Audience Manager et les partenaires du secteur. Utilisez la liste pour identifier les partenaires qui peuvent recevoir des identifiants d’appareils mobiles provenant d’Audience Manager, les partenaires qui peuvent recevoir des informations non segmentées, etc. |
-| [Comment transférer les données d’Adobe Analytics vers Audience Manager](../integration/integration-other-solutions/audience-management-module.md) | Cette page a été mise à jour afin de présenter Adobe Experience Platform Launch comme le moyen privilégié de transfert de données d’Adobe Analytics vers Audience Manager. |
+| [Comment transférer les données d’Adobe Analytics vers Audience Manager](../integration/integration-other-solutions/audience-management-module.md) | Nous avons mis à jour cette page afin de mettre en évidence les balises Adobe Experience Platform comme méthode privilégiée pour transférer des données d’Adobe Analytics vers l’Audience Manager. |
 | [FAQ sur l’ingestion de données client entrantes](/help/using/faq/faq-inbound-data-ingestion.md) | Nous avons mis à jour la réponse à la question « Puis-je charger un fichier de données entrant (fichier .sync ou .overwrite) avant de déployer le code Audience Manager en production ? » afin de refléter la fonctionnalité actuelle des [stratégies de fusion de profils](/help/using/features/profile-merge-rules/merge-rule-targeting-options.md). |
