Updated by task 'AutomatedMDTask_1663920687284_TM-MT_1663920707864'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/audience-manager.en/commit/99b8d830ba5d96b9039385e15bcf2fb389a46e85

--- a/help/using/docs-updates/docs-2017.md
+++ b/help/using/docs-updates/docs-2017.md
@@ -7,7 +7,7 @@ title: Mises à jour de la documentation 2017
 uuid: 575245c0-68ae-4ba1-8041-4217e55f4103
 feature: Overview
 exl-id: a3a1f03c-5073-4de7-ad57-5c9999f7c4f3
-source-git-commit: 3f4a161ee856357b5cb5eb757ad779dee5357b09
+source-git-commit: e50aab600f0bf197b1356ba77ac86efb4456979a
 workflow-type: tm+mt
 source-wordcount: '1975'
 ht-degree: 23%
@@ -179,7 +179,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
    <td colname="col2"> <p>Révision et réorganisation du contenu de l’API DCS. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p><a href="../dil/dil-class-overview/dil-coopsafe.md"> isCoopSafe</a> </p> </td> 
+   <td colname="col1"> <p>isCoopSafe </p> </td> 
    <td colname="col2"><i>Cette fonction a été abandonnée.</i> <p>Une nouvelle configuration permet de contrôler la manière dont les données sont envoyées à la variable <span class="keyword"> Experience Cloud Device Co-op</span>. </p> </td> 
   </tr> 
   <tr> 
