--- a/help/using/docs-updates/docs-2018.md
+++ b/help/using/docs-updates/docs-2018.md
@@ -7,7 +7,7 @@ title: Mises à jour de la documentation 2018
 uuid: 75592371-8e97-440a-9cdc-417498d13d6c
 feature: Overview
 exl-id: a6d166e9-cad3-4201-a6dd-3d288366938c
-source-git-commit: 319be4dade263c5274624f07616b404decb7066f
+source-git-commit: e41dddd022b6fa02cab3e16bd21536d41584975f
 workflow-type: tm+mt
 source-wordcount: '1030'
 ht-degree: 29%
@@ -65,7 +65,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
  <tbody> 
   <tr> 
    <td colname="col1"> <p><a href="../features/manage-datasources.md#delete-data-source"> Suppression d’une Source de données</a> </p> </td> 
-   <td colname="col2"> <p>Pour les clients qui utilisent Audience Manager et Adobe Analytics : l’interface utilisateur de l’Audience Manager ne vous permet pas de supprimer des sources de données créées automatiquement de vos suites de rapports Analytics. Utilisez le <a href="https://experienceleague.adobe.com/docs/core-services/interface/about-core-services/core-services-landing.html" format="https" scope="external"> Core Service</a> pour démapper ces sources de données. </p> </td> 
+   <td colname="col2"> <p>Pour les clients qui utilisent Audience Manager et Adobe Analytics : l’interface utilisateur de l’Audience Manager ne vous permet pas de supprimer des sources de données créées automatiquement de vos suites de rapports Analytics. Utilisez le <a href="https://experienceleague.adobe.com/en/docs/core-services/interface/services/customer-attributes/attributes" format="https" scope="external"> Core Service</a> pour démapper ces sources de données. </p> </td> 
   </tr> 
  </tbody> 
 </table>
@@ -199,7 +199,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
  <tbody> 
   <tr> 
    <td colname="col1"> <p><a href="../integration/gpt-aam-destination/gpt-aam-requirements.md"> Conditions requises et méthodes d’envoi de segments à DFP à l’aide de Google...</a> </p> </td> 
-   <td colname="col2"> <p>À compter du 29 mars 2018, tous les clients d’Audience Manager qui sont sur <a href="https://www.ampproject.org/learn/overview/" format="https" scope="external"> Accelerated Mobile Pages</a> (AMP) devront tirer parti de l’intégration côté serveur lors de l’envoi d’audiences à DoubleClick for Publishers (DFP) de Google. </p> </td> 
+   <td colname="col2"> <p>À compter du 29 mars 2018, tous les clients d’Audience Manager qui sont sur <a href="https://www.ampproject.org/learn/overview/" format="https" scope="external"> Accelerated Mobile Pages</a> (AMP) devront tirer parti de l’intégration côté serveur lors de l’envoi d’audiences à Google DoubleClick for Publishers (DFP). </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/traits/trait-and-segment-qualification-reference.md#unique-trait-realizations"> Réalisations de caractéristiques uniques et population totale de caractéristiques </a> </p> </td> 
