Updated by AutoLocalizeURLs.py

--- a/help/using/docs-updates/docs-2016.md
+++ b/help/using/docs-updates/docs-2016.md
@@ -160,7 +160,7 @@ Liste de la documentation sur les Audiences Manager nouvelles et révisées publ
    <td colname="col2"> Modification de la valeur TTL (time-to-live) du cookie demdex et du cookie partenaire à 180 jours pour se conformer aux réglementations CNIL françaises. </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <a href="https://experienceleague.adobe.com/docs/core-services/interface/ec-cookies/cookies-am.html" format="https" scope="external"> Cookies utilisés dans l’Experience Cloud</a> </td> 
+   <td colname="col1"> <a href="https://experienceleague.adobe.com/docs/core-services/interface/ec-cookies/cookies-am.html?lang=fr" format="https" scope="external"> Cookies utilisés dans l’Experience Cloud</a> </td> 
    <td colname="col2"> Modification de la valeur TTL (time-to-live) du cookie demdex et du cookie partenaire à 180 jours pour se conformer aux réglementations CNIL françaises. </td> 
   </tr> 
   <tr> 
@@ -328,7 +328,7 @@ Liste de la documentation sur les Audiences Manager nouvelles et révisées publ
    <td colname="col2"> <p>La nouvelle documentation définit les mesures des rapports et les graphiques pour la fusion de profils. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="https://experienceleague.adobe.com/docs/audience-manager/user-guide/implementation-integration-guides/integration-experience-platform/aam-aep-audience-sharing.html" format="https" scope="external"> Segments d’Audience Manager dans Analytics</a> </p> </td> 
+   <td colname="col1"> <p> <a href="https://experienceleague.adobe.com/docs/audience-manager/user-guide/implementation-integration-guides/integration-experience-platform/aam-aep-audience-sharing.html?lang=fr" format="https" scope="external"> Segments d’Audience Manager dans Analytics</a> </p> </td> 
    <td colname="col2"> <p>Partagez des segments d’Audience Manager avec Analytics en temps réel. </p> </td> 
   </tr> 
   <tr> 
