--- a/help/using/docs-updates/docs-2018.md
+++ b/help/using/docs-updates/docs-2018.md
@@ -18,7 +18,7 @@ ht-degree: 29%
 
 Liste de la documentation nouvelle ou révisée publiée en 2018 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
 
-Consultez les [Notes de mise à jour d’Experience Cloud](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/current.html) pour prendre connaissance des modifications apportées à [!DNL Audience Manager] et aux autres solutions d’[!DNL Experience Cloud]. Pour consulter les anciennes notes de mise à jour, reportez-vous à la section [Années précédentes](../docs-updates/docs-2018.md).
+Consultez les [Notes de mise à jour d’Experience Cloud](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/current.html?lang=fr) pour prendre connaissance des modifications apportées à [!DNL Audience Manager] et aux autres solutions d’[!DNL Experience Cloud]. Pour consulter les anciennes notes de mise à jour, reportez-vous à la section [Années précédentes](../docs-updates/docs-2018.md).
 
 ## Octobre 2018 {#oct-2018}
 
@@ -65,7 +65,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
  <tbody> 
   <tr> 
    <td colname="col1"> <p><a href="../features/manage-datasources.md#delete-data-source"> Suppression d’une Source de données</a> </p> </td> 
-   <td colname="col2"> <p>Pour les clients qui utilisent Audience Manager et Adobe Analytics : l’interface utilisateur de l’Audience Manager ne vous permet pas de supprimer des sources de données créées automatiquement de vos suites de rapports Analytics. Utilisez le <a href="https://experienceleague.adobe.com/en/docs/core-services/interface/services/customer-attributes/attributes" format="https" scope="external"> Core Service</a> pour démapper ces sources de données. </p> </td> 
+   <td colname="col2"> <p>Pour les clients qui utilisent Audience Manager et Adobe Analytics : l’interface utilisateur de l’Audience Manager ne vous permet pas de supprimer des sources de données créées automatiquement de vos suites de rapports Analytics. Utilisez le <a href="https://experienceleague.adobe.com/fr/docs/core-services/interface/services/customer-attributes/attributes" format="https" scope="external"> Core Service</a> pour démapper ces sources de données. </p> </td> 
   </tr> 
  </tbody> 
 </table>
@@ -82,7 +82,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
  <tbody> 
   <tr> 
    <td colname="col1"> <p><a href="../dil/dil-overview.md"> API Data Integration Library (DIL)</a> </p> </td> 
-   <td colname="col2"> <p>À partir de la version 8.0, le <span class="wintitle"> DIL</span> dépend fortement de <a href="https://experienceleague.adobe.com/docs/id-service/using/home.html" format="https" scope="external"><span class="keyword"> Adobe Experience Platform Identity Service</span></a>, version 3.3 ou supérieure. </p> </td> 
+   <td colname="col2"> <p>À partir de la version 8.0, le <span class="wintitle"> DIL</span> dépend fortement de <a href="https://experienceleague.adobe.com/docs/id-service/using/home.html?lang=fr" format="https" scope="external"><span class="keyword"> Adobe Experience Platform Identity Service</span></a>, version 3.3 ou supérieure. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../dil/dil-overview.md"> Comprendre le Data Integration Library (DIL)</a> </p> </td> 
