Updated by AutoLocalizeURLs.py

--- a/help/using/docs-updates/docs-2015.md
+++ b/help/using/docs-updates/docs-2015.md
@@ -201,7 +201,7 @@ Une liste de la documentation Audience Manager nouvelle et révisée publiée en
    <td colname="col2"> <p> 
      <ul id="ul_D4F6BB8E192E4C1BAF1B505541A1E56E"> 
       <li id="li_9C29F2E224444AC5B77B69C3BC9B26A8">Suppression du paramètre facultatif, <code> iframeAttachmentDelay</code>. </li> 
-      <li id="li_85A63519222A4423B8D7A3FF90929741">Ajout d’une note à <code> declaredId</code> variable . Lors de l’utilisation du service d’identification des visiteurs, définissez l’identifiant avec <code> setCustomerIDs</code> au lieu de DIL. Voir <a href="https://experienceleague.adobe.com/docs/id-service/using/reference/authenticated-state.html" format="https" scope="external"> ID de client et états authentifiés</a>. </li> 
+      <li id="li_85A63519222A4423B8D7A3FF90929741">Ajout d’une note à <code> declaredId</code> variable . Lors de l’utilisation du service d’identification des visiteurs, définissez l’identifiant avec <code> setCustomerIDs</code> au lieu de DIL. Voir <a href="https://experienceleague.adobe.com/docs/id-service/using/reference/authenticated-state.html?lang=fr" format="https" scope="external"> ID de client et états authentifiés</a>. </li> 
      </ul> </p> </td> 
   </tr> 
  </tbody> 
