--- a/help/using/docs-updates/docs-2017.md
+++ b/help/using/docs-updates/docs-2017.md
@@ -18,7 +18,7 @@ ht-degree: 5%
 
 Une liste des documents nouveaux ou révisés publiés en 2017 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
 
-Consultez les [Notes de mise à jour d’Experience Cloud](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/current.html) pour prendre connaissance des modifications apportées à [!DNL Audience Manager] et aux autres solutions d’[!DNL Experience Cloud]. Pour consulter les anciennes notes de mise à jour, reportez-vous à la section [Années précédentes](../docs-updates/docs-2018.md).
+Consultez les [Notes de mise à jour d’Experience Cloud](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/current.html?lang=fr) pour prendre connaissance des modifications apportées à [!DNL Audience Manager] et aux autres solutions d’[!DNL Experience Cloud]. Pour consulter les anciennes notes de mise à jour, reportez-vous à la section [Années précédentes](../docs-updates/docs-2018.md).
 
 ## Décembre 2017 {#dec-17}
 
@@ -35,7 +35,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
    <td colname="col2"> <p>Ajout d’une section sur la résolution des problèmes. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p><a href="https://experienceleague.adobe.com/docs/core-services/interface/ec-cookies/cookies-am.html" format="https" scope="external"> les cookies Audience Manager </a> </p> </td> 
+   <td colname="col1"> <p><a href="https://experienceleague.adobe.com/docs/core-services/interface/ec-cookies/cookies-am.html?lang=fr" format="https" scope="external"> les cookies Audience Manager </a> </p> </td> 
    <td colname="col2"> <p> Obsolescence du cookie DST et ajout des informations de durée de vie des cookies demdex et dextp, lorsque l’utilisateur choisit de ne pas collecter les données. </p> </td> 
   </tr> 
  </tbody> 
@@ -397,7 +397,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
    <td colname="col2"> <p>Ajout d’un nouveau document expliquant pourquoi <span class="keyword"> Audience Manager</span> effectue des appels au domaine <code> demdex.net</code>. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p><a href="https://experienceleague.adobe.com/docs/core-services/interface/ec-cookies/cookies-am.html" format="https" scope="external"> les cookies Audience Manager </a> </p> </td> 
+   <td colname="col1"> <p><a href="https://experienceleague.adobe.com/docs/core-services/interface/ec-cookies/cookies-am.html?lang=fr" format="https" scope="external"> les cookies Audience Manager </a> </p> </td> 
    <td colname="col2"> <p>Révisé et mis à jour avec de nouvelles informations. </p> </td> 
   </tr> 
  </tbody> 
@@ -471,7 +471,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
    <td colname="col2"> <p>Ajout de périodes de recherche en amont de 1, 14, 90 jours et de durée de vie pour la population totale et en temps réel de segments. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p><a href="https://experienceleague.adobe.com/docs/core-services/interface/more-resources/dns-prefetch.html" format="https" scope="external"> de la prérécupération DNS avec différentes solutions Experience Cloud</a> </p> </td> 
+   <td colname="col1"> <p><a href="https://experienceleague.adobe.com/docs/core-services/interface/more-resources/dns-prefetch.html?lang=fr" format="https" scope="external"> de la prérécupération DNS avec différentes solutions Experience Cloud</a> </p> </td> 
    <td colname="col2"> <p>Décrit comment implémenter la prérécupération DNS pour réduire les temps de chargement des pages. </p> </td> 
   </tr> 
   <tr> 
@@ -548,4 +548,4 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
 
 ## Années précédentes {#prev}
 
-Liens vers les notes de mise à jour [!DNL Audience Manager] et les modifications de la documentation. Pour archiver les modifications plus anciennes au niveau du [!DNL Experience Cloud], reportez-vous à la section [Notes de mise à jour précédentes](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/current.html).
+Liens vers les notes de mise à jour [!DNL Audience Manager] et les modifications de la documentation. Pour archiver les modifications plus anciennes au niveau du [!DNL Experience Cloud], reportez-vous à la section [Notes de mise à jour précédentes](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/current.html?lang=fr).
