--- a/help/using/docs-updates/docs-2019.md
+++ b/help/using/docs-updates/docs-2019.md
@@ -18,7 +18,7 @@ ht-degree: 35%
 
 Une liste de la documentation nouvelle ou révisée publiée en 2019. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
 
-Consultez les [Notes de mise à jour d’Experience Cloud](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/current.html) pour prendre connaissance des modifications apportées à [!DNL Audience Manager] et aux autres solutions d’[!DNL Experience Cloud]. Pour consulter les anciennes notes de mise à jour, reportez-vous à la section [Années précédentes](../docs-updates/docs-2018.md).
+Consultez les [Notes de mise à jour d’Experience Cloud](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/current.html?lang=fr) pour prendre connaissance des modifications apportées à [!DNL Audience Manager] et aux autres solutions d’[!DNL Experience Cloud]. Pour consulter les anciennes notes de mise à jour, reportez-vous à la section [Années précédentes](../docs-updates/docs-2018.md).
 
 ## Novembre 2019 {#aam-november-updates}
 
@@ -77,7 +77,7 @@ Aucune mise à jour majeure de la documentation ne doit être annoncée pour jui
 |--- |----|
 | [Obscurcissement des adresses IP](/help/using/features/administration/ip-obfuscation.md) | Votre entreprise peut souhaiter obscurcir l’adresse IP dans de nombreux pays en raison de la réglementation mondiale en matière de confidentialité. Audience Manager vous permet d’obsurcir les adresses IP des visiteurs de manière globale ou pays par pays. |
 | [Intégration Facebook WCA](/help/using/integration/integrating-third-party/facebook-wca-integration.md) | Cette page illustre le processus de création de pixels d’audiences personnalisées (WCA) de site web Facebook dans le but d’envoyer des segments d’audience Audience Manager web vers Facebook, pour un ciblage d’annonce en ligne avec une transparence améliorée. |
-| [Module d’Audience Manager pour le TCF de l’IAB](/help/using/overview/data-security-and-privacy/aam-iab-plugin.md) | Un aspect important des obligations de confidentialité que vous avez envers vos utilisateurs réside dans l’acquisition et le respect des choix des utilisateurs quant à la façon dont leurs données personnelles sont utilisées (c’est-à-dire les « objectifs ») et quant aux entités qui les utilisent (les « entreprises »). Adobe vous offre les moyens de gérer et de communiquer les choix de confidentialité de vos utilisateurs par le biais de la fonctionnalité [Opt-in](https://experienceleague.adobe.com/docs/id-service/using/implementation/opt-in-service/optin-overview.html) et de la prise en charge du [IAB Transparency and Consent Framework (TCF)](https://iabtechlab.com/standards/gdpr-transparency-and-consent-framework/). <br> <br>  Cet article décrit les cas d’utilisation d’Audience Manager qui prennent en charge le IAB TCF et comment implémenter la prise en charge du IAB TCF dans Audience Manager. |
+| [Module d’Audience Manager pour le TCF de l’IAB](/help/using/overview/data-security-and-privacy/aam-iab-plugin.md) | Un aspect important des obligations de confidentialité que vous avez envers vos utilisateurs réside dans l’acquisition et le respect des choix des utilisateurs quant à la façon dont leurs données personnelles sont utilisées (c’est-à-dire les « objectifs ») et quant aux entités qui les utilisent (les « entreprises »). Adobe vous offre les moyens de gérer et de communiquer les choix de confidentialité de vos utilisateurs par le biais de la fonctionnalité [Opt-in](https://experienceleague.adobe.com/docs/id-service/using/implementation/opt-in-service/optin-overview.html?lang=fr) et de la prise en charge du [IAB Transparency and Consent Framework (TCF)](https://iabtechlab.com/standards/gdpr-transparency-and-consent-framework/). <br> <br>  Cet article décrit les cas d’utilisation d’Audience Manager qui prennent en charge le IAB TCF et comment implémenter la prise en charge du IAB TCF dans Audience Manager. |
 
 ## Mars 2019 {#aam-march-updates}
 
