--- a/help/using/docs-updates/docs-2016.md
+++ b/help/using/docs-updates/docs-2016.md
@@ -160,7 +160,7 @@ Une liste de la documentation Audience Manager nouvelle et révisée publiée en
    <td colname="col2"> Modification de la valeur de la durée de vie (TTL) du cookie demdex et du cookie du partenaire à 180 jours pour se conformer à la réglementation CNIL française. </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <a href="https://experienceleague.adobe.com/docs/core-services/interface/ec-cookies/cookies-am.html" format="https" scope="external"> les cookies utilisés dans Experience Cloud</a> </td> 
+   <td colname="col1"> <a href="https://experienceleague.adobe.com/docs/core-services/interface/ec-cookies/cookies-am.html?lang=fr" format="https" scope="external"> les cookies utilisés dans Experience Cloud</a> </td> 
    <td colname="col2"> Modification de la valeur de la durée de vie (TTL) du cookie demdex et du cookie du partenaire à 180 jours pour se conformer à la réglementation CNIL française. </td> 
   </tr> 
   <tr> 
@@ -328,7 +328,7 @@ Une liste de la documentation Audience Manager nouvelle et révisée publiée en
    <td colname="col2"> <p>Une nouvelle documentation définit les mesures et les graphiques du rapport pour la fusion de profils. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="https://experienceleague.adobe.com/docs/audience-manager/user-guide/implementation-integration-guides/integration-experience-platform/aam-aep-audience-sharing.html" format="https" scope="external"> des segments Audience Manager dans Analytics</a> </p> </td> 
+   <td colname="col1"> <p> <a href="https://experienceleague.adobe.com/docs/audience-manager/user-guide/implementation-integration-guides/integration-experience-platform/aam-aep-audience-sharing.html?lang=fr" format="https" scope="external"> des segments Audience Manager dans Analytics</a> </p> </td> 
    <td colname="col2"> <p>Partagez des segments Audience Manager avec Analytics en temps réel. </p> </td> 
   </tr> 
   <tr> 
