Updated by mdAutofix.py

--- a/help/using/docs-updates/docs-2019.md
+++ b/help/using/docs-updates/docs-2019.md
@@ -41,7 +41,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
 |--- |----|
 | [HTTP Strict-Transport-Security](../overview/data-security-and-privacy/data-security.md#hsts) | Nous avons ajouté la prise en charge de [!DNL HTTP Strict-Transport-Security], une politique de sécurité web qui protège contre le détournement de cookies et les attaques de rétrogradation de protocole. |
 | [Récence et fréquence](/help/using/features/segments/recency-and-frequency.md) | Nous avons mis à jour les exemples de capping de la fréquence dans l’article et ajouté des exemples pour le fonctionnement de la récence. |
-| <ul><li>[Créateur de segments](/help/using/features/segments/segment-builder.md)</li><li>[Rapports au niveau des segments dans Audience Marketplace](/help/using/features/audience-marketplace/marketplace-data-buyers/marketplace-buyer-billing.md)</li><li>[Création de rapports d’identité d’audience dans la vue Résumé des caractéristiques](/help/using/features/traits/trait-details-page.md)</li><li>[Rapports d’identité d’audience dans la vue Résumé du segment](/help/using/features/segments/segment-summary-view.md)</li><li>[Comment créer des caractéristiques de conversion ](/help/using/features/traits/create-onboarded-rule-based-traits.md)</li><li>[Recommandations de caractéristiques](/help/using/features/segments/trait-recommendations.md)</li></ul> | Nous avons ajouté des tutoriels vidéo à plusieurs pages dans la documentation d’Audience Manager. |
+| <ul><li>[Créateur de segments](/help/using/features/segments/segment-builder.md)</li><li>[Rapports au niveau des segments dans Audience Marketplace](/help/using/features/audience-marketplace/marketplace-data-buyers/marketplace-buyer-billing.md)</li><li>[Création de rapports d’identité d’audience dans la vue Résumé des caractéristiques](/help/using/features/traits/trait-details-page.md)</li><li>[Rapports d’identité d’audience dans la vue Résumé du segment](/help/using/features/segments/segment-summary-view.md)</li><li>[Comment créer des caractéristiques de conversion &#x200B;](/help/using/features/traits/create-onboarded-rule-based-traits.md)</li><li>[Recommandations de caractéristiques](/help/using/features/segments/trait-recommendations.md)</li></ul> | Nous avons ajouté des tutoriels vidéo à plusieurs pages dans la documentation d’Audience Manager. |
 
 ## Août 2019 {#aam-august-updates}
 
