--- a/help/using/docs-updates/docs-2020.md
+++ b/help/using/docs-updates/docs-2020.md
@@ -25,14 +25,14 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://experiencelea
 | Rubrique | Description |
 |----|----|
 | [Audiences prédictives](/help/using/features/algorithmic-models/predictive-audiences.md) | <ul><li>**Clonage de modèles d’audiences prédictives** : vous pouvez désormais cloner les modèles existants et modifier leur configuration en fonction de vos besoins. Lisez [Clonage et modification de modèles d’audience prédictifs](/help/using/features/algorithmic-models/predictive-audiences.md#clone-predictive-audiences) pour plus d’informations.</li><li>**Classification de lots d’audiences prédictives** : en plus de classer les visiteurs en rôles distincts en temps réel, les audiences prédictives prennent désormais en charge la classification par lots, ce qui vous permet de classer les utilisateurs intégrés et d’activer les destinations par lots.</li></ul> |
-| [Rapports de chevauchement ](/help/using/reporting/dynamic-reports/dynamic-reports.md) | Nous avons mis à jour la méthodologie que nous utilisons pour calculer les rapports de chevauchement ([trait à trait](/help/using/reporting/dynamic-reports/trait-trait-overlap-report.md), [segment à trait](/help/using/reporting/dynamic-reports/segment-trait-overlap-report.md), [segment à segment](/help/using/reporting/dynamic-reports/segment-segment-overlap-report.md)). Le calcul des rapports de chevauchement est désormais basé sur les rapports uniques et les signatures MinHash (plutôt que sur l’échantillonnage de données [1/54](/help/using/reporting/report-sampling.md#data-sampling-ratio)). |
+| [Rapports de chevauchement &#x200B;](/help/using/reporting/dynamic-reports/dynamic-reports.md) | Nous avons mis à jour la méthodologie que nous utilisons pour calculer les rapports de chevauchement ([trait à trait](/help/using/reporting/dynamic-reports/trait-trait-overlap-report.md), [segment à trait](/help/using/reporting/dynamic-reports/segment-trait-overlap-report.md), [segment à segment](/help/using/reporting/dynamic-reports/segment-segment-overlap-report.md)). Le calcul des rapports de chevauchement est désormais basé sur les rapports uniques et les signatures MinHash (plutôt que sur l’échantillonnage de données [1/54](/help/using/reporting/report-sampling.md#data-sampling-ratio)). |
 
 
 ## Septembre 2020 {#aam-september-updates}
 
 | Rubrique | Description |
 |---- |----|
-| [ Accessibilité dans Audience Manager ](/help/using/overview/accessibility-in-aam.md) | L’accessibilité fait référence à une série de fonctionnalités qui rendent un produit logiciel utilisable, avec le moins d’effort possible de la part des utilisateurs présentant divers handicaps, tels que visuels, auditifs, cognitifs, moteurs ou autres. Pour faciliter l’utilisation d’Audience Manager pour tous, nous avons développé la prise en charge de plusieurs fonctionnalités d’accessibilité, détaillées dans cet article. |
+| [&#x200B; Accessibilité dans Audience Manager &#x200B;](/help/using/overview/accessibility-in-aam.md) | L’accessibilité fait référence à une série de fonctionnalités qui rendent un produit logiciel utilisable, avec le moins d’effort possible de la part des utilisateurs présentant divers handicaps, tels que visuels, auditifs, cognitifs, moteurs ou autres. Pour faciliter l’utilisation d’Audience Manager pour tous, nous avons développé la prise en charge de plusieurs fonctionnalités d’accessibilité, détaillées dans cet article. |
 | [Noms de fichiers S3 entrants](/help/using/integration/sending-audience-data/batch-data-transfer-explained/inbound-s3-filenames.md) et [noms de fichiers FTP entrants](/help/using/integration/sending-audience-data/batch-data-transfer-explained/inbound-ftp-filenames.md) | Nous avons mis à jour les définitions et fourni des exemples pour les champs `DPID` et `DPID_TARGET_DATA_OWNER` dans la syntaxe du nom de fichier. |
 
 ## Août 2020 {#aam-august-updates}
